syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.jettra.consensus.proto";
option java_outer_classname = "RaftProto";

package raft;

service RaftService {
  rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse);
  rpc RequestVote (RequestVoteRequest) returns (RequestVoteResponse);
  rpc Propose (ProposeRequest) returns (ProposeResponse);
}

message AppendEntriesRequest {
  uint64 group_id = 1;
  uint64 term = 2;
  string leader_id = 3;
  uint64 prev_log_index = 4;
  uint64 prev_log_term = 5;
  repeated LogEntry entries = 6;
  uint64 leader_commit = 7;
}

message AppendEntriesResponse {
  uint64 term = 1;
  bool success = 2;
  uint64 last_log_index = 3;
}

message RequestVoteRequest {
  uint64 group_id = 1;
  uint64 term = 2;
  string candidate_id = 3;
  uint64 last_log_index = 4;
  uint64 last_log_term = 5;
}

message RequestVoteResponse {
  uint64 term = 1;
  bool vote_granted = 2;
}

message ProposeRequest {
  uint64 group_id = 1;
  bytes data = 2;
}

message ProposeResponse {
  bool success = 1;
  string leader_id = 2;
  string error_message = 3;
}

message LogEntry {
  uint64 term = 1;
  uint64 index = 2;
  bytes data = 3;
}
